--- a/style.css
+++ b/style.css
@@ -16,8 +16,9 @@ body {
 }
 
 .main-container {
-  position: fixed;
+  position: absolute;
   top: 100px;
+  max-height: fit-content;
   width: 40%;
   display: flex;
   flex-direction: column;
