--- a/style.css
+++ b/style.css
@@ -82,12 +82,12 @@ h1 {
   flex-direction: column;
   border: 1px solid #c4c4c4;
   border-radius: 10px;
+  margin-bottom: 10px;
 }
 
 .row {
   width: 100%;
   display: flex;
-
   justify-content: space-around;
   height: 35px;
   margin-top: 10px;
